feito demorei, porque errei uma letra

--- a/atividade6.html
+++ b/atividade6.html
@@ -38,7 +38,7 @@
             }
 
             document.getElementById("resultado").innerHTML = `
-            ${nome}, você pode dirigir ${tipoVeiculo}.
+            ${nome}, você pode dirigir ${tipoPrato}.
             `;
         }
     </script>
